--- a/blog-site/backend/pyproject.toml
+++ b/blog-site/backend/pyproject.toml
@@ -23,7 +23,7 @@ toml = "^0.10.2"
 [tool.poetry.dev-dependencies]
 pytest = "^6.1.2"
 pytest-cov = "^2.11.1"
-black = "20.8b1"  # match to .pre-commit-config.yaml
+black = "22.3.0"  # match to .pre-commit-config.yaml
 isort = "5.7.0"  # match to .pre-commit-config.yaml
 pre-commit = "^2.11.1"
 
